<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/detail_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen"
        android:layout_marginBottom="@dimen/size_ten"
        android:padding="@dimen/size_five"
        android:textSize="@dimen/textsize_twenty_four" />

    <ImageView
        android:id="@+id/detail_poster_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_descr"
        android:layout_below="@id/detail_title_view"/>

    <TextView
        android:id="@+id/detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/rating"
        android:paddingLeft="@dimen/size_five"
        android:paddingRight="@dimen/size_five"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_twenty"
        android:layout_marginBottom="@dimen/size_ten"
        android:layout_below="@id/detail_title_view"
        android:layout_toRightOf="@id/detail_poster_view"
        android:layout_toEndOf="@id/detail_poster_view"/>

    <TextView
        android:id="@+id/detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:paddingBottom="@dimen/size_five"
        android:paddingLeft="@dimen/size_five"
        android:paddingRight="@dimen/size_five"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_twenty"
        android:layout_toRightOf="@id/detail_poster_view"
        android:layout_toEndOf="@id/detail_poster_view"
        android:layout_below="@id/detail_rating" />


        <TextView
            android:id="@+id/detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/overview"
            android:padding="@dimen/size_eight"
            android:textSize="@dimen/textsize_twenty"
            android:layout_below="@id/detail_poster_view"/>


</RelativeLayout>
</ScrollView>